--- a/website/index.html
+++ b/website/index.html
@@ -11,9 +11,8 @@
     <center>
       <h1>the man fun</h1>
       <div>
-        <a> 
+        <a href="games/bladies.html">
           <button>Baldies</button>
-                <href="games/bladies.html">
         </a>
       </div>
     </center>
